--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,7 @@ button:focus-visible {
   /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem; */
+  width: 100%;
   text-align: center;
 }
 
